# ml-xgboost

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.lambda  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  test_curl.sh  test_endpoints.py  test_mlflow_connection.py
.kiro/specs/ml-api-platform/: design.md  requirements.md  tasks.md
app/: README.md  __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  health.py  models.py  predictions.py
app/core/: __init__.py  config.py  database.py  security.py
app/schemas/: __init__.py  error.py  health.py  prediction.py
app/services/: __init__.py  auth_service.py  model_service.py  prediction_service.py
app/utils/: __init__.py  logging.py  metrics.py
config/: development.env  production.env  settings.py
deployment/: __init__.py  lambda_handler.py
src/: __init__.py
src/api/: __init__.py  app.py  auth.py  logging_config.py  main.py  model_loader.py  models.py
src/mlflow_components/: __init__.py  experiment_manager.py  health_check.py  model_promotion.py  model_registry.py  tracking_server.py
src/training/: __init__.py  config.py  data_loader.py  data_validation.py  hyperparameter_optimizer.py  model_registry_manager.py  trainer.py
tests/: test_model_loader.py
